adding firebase hosting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">    
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
     <!---Nav Section-->
@@ -58,7 +58,7 @@
         <div class="row align-items-center">
             <div class="col-lg-5 align-self-center">
                 <div class="row justify-content-center align-items-start">
-                    <img src="assets/portrait.png" alt="Self portrait headshot" class="img-fluid headshot">
+                    <img src="src/assets/portrait.png" alt="Self portrait headshot" class="img-fluid headshot">
                 </div>
             </div>
             <div class="col-lg-7">
@@ -75,27 +75,27 @@
                         <h3 class="subheading-3">Skills</h3>
                         <ul class="skill-list">
                             <li>
-                                <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo"> 
+                                <img src="src/assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo"> 
                                 <span>Python</span>
                             </li>
                             <li>
-                                <img src="assets/c++-logo.svg" alt="c++-icon" class="skill-icon c++-logo">
+                                <img src="src/assets/c++-logo.svg" alt="c++-icon" class="skill-icon c++-logo">
                                 <span>C++</span>
                             </li>
                             <li>
-                                <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
+                                <img src="src/assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
                                 <span>JavaScript</span>
                             </li>
                             <li>
-                                <img src="assets/html-logo.svg" alt="html-icon" class="skill-icon html-logo">
+                                <img src="src/assets/html-logo.svg" alt="html-icon" class="skill-icon html-logo">
                                 <span>HTML</span>
                             </li>
                             <li>
-                                <img src="assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo"> 
+                                <img src="src/assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo"> 
                                 <span>CSS</span>
                             </li>
                             <li>
-                                <img src="assets/aws-logo.svg" alt="aws-icon" class="skill-icon aws-logo">
+                                <img src="src/assets/aws-logo.svg" alt="aws-icon" class="skill-icon aws-logo">
                                 <span>AWS</span>
                             </li>
                         </ul>
@@ -111,7 +111,7 @@
         <!--Paycom Tile-->
         <div class="row align-items-center tile">
             <div class="col-lg-4 align-self-center img-container">
-                <img src="assets/paycom-logo.jpg" alt="paycom career logo" class="img-fluid career-icon">
+                <img src="src/assets/paycom-logo.jpg" alt="paycom career logo" class="img-fluid career-icon">
             </div>
             <div class="col-lg-8 align-self-center">
                 <div class="tile-text">
@@ -126,11 +126,11 @@
                 <div class="experience-skills">
                     <ul class="paycom-skills career-skills">
                         <li class="python-icon">
-                            <img src="assets/python-logo.svg" alt="python-icon" class="skill-icon"> 
+                            <img src="src/assets/python-logo.svg" alt="python-icon" class="skill-icon"> 
                             <span>Python</span>
                         </li>
                         <li class="javascript-icon">
-                            <img src="assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon">
+                            <img src="src/assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon">
                             <span>JavaScript</span>
                         </li>
                     </ul>
@@ -141,7 +141,7 @@
         <!--TAMU Tile-->
         <div class="row align-items-center tile">
             <div class="col-lg-4 align-self-center img-container">
-                <img src="assets/math-logo.png" alt="TAMU logo" class="img-fluid career-icon">
+                <img src="src/assets/math-logo.png" alt="TAMU logo" class="img-fluid career-icon">
             </div>
             <div class="col-lg-8 align-self-center">
                 <div class="tile-text">
@@ -158,11 +158,11 @@
                 <div class="experience-skills">
                     <ul class="tamu-skills career-skills">
                         <li class="python-icon">
-                            <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
+                            <img src="src/assets/python-logo.svg" alt="python icon" class="skill-icon">
                             <span>Python</span>
                         </li>
                         <li class="matlab-icon">
-                            <img src="assets/matlab-logo.png" alt="matlab icon" class="skill-icon">
+                            <img src="src/assets/matlab-logo.png" alt="matlab icon" class="skill-icon">
                             <span>MatLab</span>
                         </li>
                     </ul>
@@ -173,7 +173,7 @@
         <!--ACC Tile-->
         <div class="row align-items-center justify-items-center tile">
             <div class="col-lg-4 align-self-center img-container">
-                <img src="assets/acc-logo.jpg" alt="acc logo" class="img-fluid career-icon">
+                <img src="src/assets/acc-logo.jpg" alt="acc logo" class="img-fluid career-icon">
             </div>
             <div class="col-lg-8 align-self-center">
                 <div class="tile-text">
@@ -191,11 +191,11 @@
                 <div class="experience-skills">
                     <ul class="acc-skills career-skills">
                         <li class="js-icon">
-                            <img src="assets/JavaScript-logo.png" alt="javascript icon" class="skill-icon">
+                            <img src="src/assets/JavaScript-logo.png" alt="javascript icon" class="skill-icon">
                             <span>JavaScript</span>
                         </li>
                         <li class="python-icon">
-                            <img src="assets/python-logo.svg" alt="python icon" class="skill-icon">
+                            <img src="src/assets/python-logo.svg" alt="python icon" class="skill-icon">
                             <span>Python</span>
                         </li>
                     </ul>
