working on contact form

--- a/index.html
+++ b/index.html
@@ -225,14 +225,11 @@
  --->
 
     <!--Contact Me Section-->
-    <section id="contact" class="container">
-        <div class="row justify-content-center">
-            <div class="col-12">
+    <section id="contact" class="container overflow-hidden">
+        <div class="row justify-content-center ">
+            <div class="form-container">
                 <h2 class="contact-text">Contact Me</h2>
-                <p>
-                    Get in touch or email me directly at carlosra0345@gmail.com
-                </p>
-                <form class="contact-form">
+                <form class="contact-form mx-auto">
                     <input class="name-input contact-input" type="text" placeholder="<Name>">
                     <input class="email-input contact-input" type="text" placeholder="<Email>">
                     <textarea class="message-input" placeholder="<Message>" maxlength="400"></textarea>
