--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="row justify-content-center ">
             <div class="form-container">
                 <h2 class="contact-text">Contact Me</h2>
-                <form class="contact-form mx-auto" onsubmit="sendEmail(); reset(); return false;">
+                <form class="contact-form mx-auto">
                     <input id="user-name" class="name-input contact-input" type="text" placeholder="<Name>" required>
                     <input id="user-email"  class="email-input contact-input" type="email" placeholder="<Email>" required>
                     <textarea id="user-message"  class="message-input" placeholder="<Message>" maxlength="400" required></textarea>
@@ -266,13 +266,10 @@
             </div>
         </div>
     </section>
-
-    <!--SMTPJS link for email-->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    
     <!--Popper.js, Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!--Link for index.js-->
-    <script src="src/scripts/index.js"></script>
+
 
 </body>
 </html>
