--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
             </div>
         </div>
     </section>
+
+    <!--Footer SVG-->
+    <div src="src/assets/layered-waves-haikei.svg" class="spacer layer1"></div>
     
     <!--Popper.js, Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
