--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Acosta</title>
     <!--Google Fonts API, , then external stylesheet-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="src/styles/style.css">
+    <!--CDN link for KUTE.js-->
+    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"></script>
 </head>
+
 <body>
     <!---Nav Section-->
     <nav class="navbar navbar-expand-lg mt-2">
@@ -19,7 +24,9 @@
             <a class="navbar-brand logo nav-link brand-icon" href="index.html">
                 <i class="bi bi-code-slash"></i>
             </a>
-            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="toggles navigation">
+            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false"
+                aria-label="toggles navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse list-container" id="navbarNav">
@@ -37,7 +44,8 @@
                         <a class="nav-link" href="#contact">// Contact Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link resume-button" target="_blank" href="https://drive.google.com/file/d/15xwscvoens8GF2lfh9Vg-RX8jALxsU_0/view?usp=sharing">
+                        <a class="nav-link resume-button" target="_blank"
+                            href="https://drive.google.com/file/d/15xwscvoens8GF2lfh9Vg-RX8jALxsU_0/view?usp=sharing">
                             Resume
                         </a>
                     </li>
@@ -46,12 +54,31 @@
         </div>
     </nav>
 
-    <!--Hero landing section-->
-    <section id="intro" class="container-fluid mx-auto">
-            <p class="name">Hi, my name is<span>Carlos Acosta.</span></p>
-            <h2>I'm a developer.</h2>
-            <span class="arrow-icon bi bi-chevron-double-down"></span>
-    </section>
+    <!--Hero Landing Section-->
+    <div>
+        <section id="intro" class="container-fluid mx-auto">
+            <svg class="blob"
+            id="visual" viewBox="0 0 960 400" 
+            width="960" height="400" 
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+            <g transform="translate(500.5651107016746 197.51324297311953)">
+                <path id="blob1"
+                    d="M76.6 -117C102.4 -102.6 128.5 -86.6 139.1 -63.5C149.6 -40.4 144.6 -10.2 137.5 17.8C130.3 45.7 121.1 71.3 105.9 95.5C90.7 119.6 69.6 142.3 45 146.5C20.4 150.6 -7.7 136.2 -39.1 128.9C-70.5 121.6 -105.1 121.4 -132.2 105.8C-159.2 90.3 -178.6 59.4 -184.4 25.9C-190.2 -7.6 -182.4 -43.7 -160.7 -66C-139 -88.2 -103.3 -96.7 -74.2 -109.6C-45.1 -122.4 -22.5 -139.7 1.4 -142C25.4 -144.2 50.8 -131.4 76.6 -117"
+                    fill="#1A2630"></path>
+            </g>
+            <g transform="translate(470.63530519990934 198.07773637117293)">
+                <path id="blob2" style="visibility:hidden"
+                    d="M76.6 -115.1C101.6 -103 125.8 -85.8 143.3 -61.4C160.8 -37 171.4 -5.4 171.6 27.9C171.8 61.1 161.5 96 137 111.7C112.5 127.3 73.9 123.6 40.5 129.6C7.1 135.6 -20.9 151.3 -51.1 152.4C-81.3 153.4 -113.6 139.9 -128.7 115.4C-143.8 90.9 -141.7 55.5 -144.9 21.8C-148.2 -11.8 -156.9 -43.7 -150.7 -73.7C-144.6 -103.7 -123.7 -131.8 -96.1 -142.7C-68.5 -153.6 -34.2 -147.3 -4.2 -140.7C25.8 -134.1 51.5 -127.2 76.6 -115.1"
+                    fill="#1A2630"></path>
+            </g>
+            </svg>
+            <div class="text-container">
+                <p class="name">Hi, my name is<span>Carlos Acosta.</span></p>
+                <h2>I'm a developer.</h2>
+                </div>
+        </section>
+    </div>
 
     <!--About Me Section-->
     <section id="about" class="container overflow-hidden">
@@ -65,7 +92,8 @@
                 <div class="row my-5">
                     <section class="about-text">
                         <h3 class="subheading-3">About Me</h3>
-                        <p>I am currently a Computer Science student at Texas A&M University who is fascinated with learning and using technology
+                        <p>I am currently a Computer Science student at Texas A&M University who is fascinated with
+                            learning and using technology
                             to solve complex problems.
                         </p>
                     </section>
@@ -75,7 +103,7 @@
                         <h3 class="subheading-3">Skills</h3>
                         <ul class="skill-list">
                             <li>
-                                <img src="src/assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo"> 
+                                <img src="src/assets/python-logo.svg" alt="python-icon" class="skill-icon python-logo">
                                 <span>Python</span>
                             </li>
                             <li>
@@ -83,7 +111,8 @@
                                 <span>C++</span>
                             </li>
                             <li>
-                                <img src="src/assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon js-logo">
+                                <img src="src/assets/JavaScript-logo.png" alt="javascript-icon"
+                                    class="skill-icon js-logo">
                                 <span>JavaScript</span>
                             </li>
                             <li>
@@ -91,7 +120,7 @@
                                 <span>HTML</span>
                             </li>
                             <li>
-                                <img src="src/assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo"> 
+                                <img src="src/assets/css-logo.svg" alt="css-icon" class="skill-icon css-logo">
                                 <span>CSS</span>
                             </li>
                             <li>
@@ -119,14 +148,16 @@
                         <h3>Paycom</h3>
                         <p>Summer Technology Engagement Program | July 2023 - Present</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, sequi adipisci sed facere 
-                        voluptatum nam eaque repellendus nisi voluptatem velit quos incidunt. Magnam cumque ipsam aliquid nihil sapiente doloribus.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, sequi adipisci sed
+                        facere
+                        voluptatum nam eaque repellendus nisi voluptatem velit quos incidunt. Magnam cumque ipsam
+                        aliquid nihil sapiente doloribus.
                     </p>
                 </div>
                 <div class="experience-skills">
                     <ul class="paycom-skills career-skills">
                         <li class="python-icon">
-                            <img src="src/assets/python-logo.svg" alt="python-icon" class="skill-icon"> 
+                            <img src="src/assets/python-logo.svg" alt="python-icon" class="skill-icon">
                             <span>Python</span>
                         </li>
                         <li class="javascript-icon">
@@ -151,7 +182,7 @@
                         <p>January 2023 - Present</p>
                     </div>
                     <p>
-                        I am currently working alongisde my professor where I am responsible for performing unit tests, 
+                        I am currently working alongisde my professor where I am responsible for performing unit tests,
                         debugging, and maintaining documentations for various MATLAB simulations programs.
                     </p>
                 </div>
@@ -183,8 +214,10 @@
                         <p>September 2023 - Present</p>
                     </div>
                     <p>
-                        Recently elected as an Events and Marketing Officer where I am responsible for managing the club's social media 
-                        presence, planning events, and driving member engagement. Additionally, as a member, I have attended various workshops learning new 
+                        Recently elected as an Events and Marketing Officer where I am responsible for managing the
+                        club's social media
+                        presence, planning events, and driving member engagement. Additionally, as a member, I have
+                        attended various workshops learning new
                         technologies and services.
                     </p>
                 </div>
@@ -205,7 +238,7 @@
     </section>
 
     <!--Projects Section-->
- <!---   <section id="projects" class=container>
+    <!---   <section id="projects" class=container>
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="seamcarve-tile">
@@ -231,8 +264,10 @@
                 <h2 class="contact-text">Contact Me</h2>
                 <form class="contact-form mx-auto">
                     <input id="user-name" class="name-input contact-input" type="text" placeholder="<Name>" required>
-                    <input id="user-email"  class="email-input contact-input" type="email" placeholder="<Email>" required>
-                    <textarea id="user-message"  class="message-input" placeholder="<Message>" maxlength="400" required></textarea>
+                    <input id="user-email" class="email-input contact-input" type="email" placeholder="<Email>"
+                        required>
+                    <textarea id="user-message" class="message-input" placeholder="<Message>" maxlength="400"
+                        required></textarea>
                     <button class="form-button" type="submit">Submit</button>
                 </form>
                 <!----
@@ -269,10 +304,22 @@
 
     <!--Footer SVG-->
     <div src="src/assets/layered-waves-haikei.svg" class="spacer layer1"></div>
-    
-    <!--Popper.js, Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+    <!--Popper.js, Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    
+        <script>
+            const tween = KUTE.fromTo(
+                '#blob1',
+                {path: '#blob1'},
+                {path: '#blob2'},
+                {repeat: 999, duration: 3000, yoyo: true}
+            )
+            tween.start()
+        </script>
 
 </body>
+
 </html>
