--- a/index.html
+++ b/index.html
@@ -57,26 +57,31 @@
     <!--Hero Landing Section-->
     <div>
         <section id="intro" class="container-fluid mx-auto">
-            <svg class="blob"
-            id="visual" viewBox="0 0 960 400" 
-            width="960" height="400" 
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-            <g transform="translate(500.5651107016746 197.51324297311953)">
-                <path id="blob1"
-                    d="M76.6 -117C102.4 -102.6 128.5 -86.6 139.1 -63.5C149.6 -40.4 144.6 -10.2 137.5 17.8C130.3 45.7 121.1 71.3 105.9 95.5C90.7 119.6 69.6 142.3 45 146.5C20.4 150.6 -7.7 136.2 -39.1 128.9C-70.5 121.6 -105.1 121.4 -132.2 105.8C-159.2 90.3 -178.6 59.4 -184.4 25.9C-190.2 -7.6 -182.4 -43.7 -160.7 -66C-139 -88.2 -103.3 -96.7 -74.2 -109.6C-45.1 -122.4 -22.5 -139.7 1.4 -142C25.4 -144.2 50.8 -131.4 76.6 -117"
-                    fill="#1A2630"></path>
-            </g>
-            <g transform="translate(470.63530519990934 198.07773637117293)">
-                <path id="blob2" style="visibility:hidden"
-                    d="M76.6 -115.1C101.6 -103 125.8 -85.8 143.3 -61.4C160.8 -37 171.4 -5.4 171.6 27.9C171.8 61.1 161.5 96 137 111.7C112.5 127.3 73.9 123.6 40.5 129.6C7.1 135.6 -20.9 151.3 -51.1 152.4C-81.3 153.4 -113.6 139.9 -128.7 115.4C-143.8 90.9 -141.7 55.5 -144.9 21.8C-148.2 -11.8 -156.9 -43.7 -150.7 -73.7C-144.6 -103.7 -123.7 -131.8 -96.1 -142.7C-68.5 -153.6 -34.2 -147.3 -4.2 -140.7C25.8 -134.1 51.5 -127.2 76.6 -115.1"
-                    fill="#1A2630"></path>
-            </g>
-            </svg>
-            <div class="text-container">
-                <p class="name">Hi, my name is<span>Carlos Acosta.</span></p>
-                <h2>I'm a developer.</h2>
+            <div class="row justify-content-center">
+                <svg class="blob"
+                id="visual" 
+                viewBox="0 0 960 540" 
+                width="960" 
+                height="540" 
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" 
+                version="1.1">
+                <g transform="translate(450.1099747070957 232.21776945904753)">
+                    <path id="blob1"
+                        d="M124 -190.1C164 -167.2 202.1 -138.5 236.8 -97.8C271.5 -57.1 302.8 -4.5 289.3 36.8C275.9 78.1 217.6 108.1 177.2 152.1C136.8 196 114.2 253.9 72.4 282.6C30.7 311.2 -30.1 310.6 -84.1 292.1C-138 273.6 -185 237.3 -207.1 191C-229.2 144.7 -226.5 88.5 -228.9 36.2C-231.3 -16.1 -238.9 -64.3 -222.3 -101.9C-205.8 -139.5 -165.1 -166.5 -124 -188.9C-82.9 -211.3 -41.4 -229.2 0.3 -229.6C42 -230 84 -213 124 -190.1"
+                        fill="#1A2630"></path>
+                </g>
+                <g transform="translate(483.6860910447248 274.9108036487998)">
+                    <path id="blob2" style="visibility:hidden"
+                        d="M135.3 -218.5C164.2 -191.9 169 -135.6 194.7 -86.7C220.4 -37.9 267.1 3.6 280 53.1C292.8 102.5 271.9 160 232.6 196.8C193.3 233.5 135.7 249.7 83.4 249.1C31.1 248.5 -15.9 231.2 -50.1 205.4C-84.4 179.5 -106 145 -150.1 117.2C-194.2 89.4 -260.9 68.2 -282.6 30.2C-304.2 -7.8 -280.8 -62.7 -256.6 -117.8C-232.4 -173 -207.5 -228.5 -164.5 -248.7C-121.6 -268.9 -60.8 -254 -3.8 -248C53.2 -242.1 106.3 -245.1 135.3 -218.5"
+                        fill="#1A2630"></path>
+                </g>
+</svg>
+                <div class="text-container">
+                    <p class="name">Hi, my name is<span>Carlos Acosta.</span></p>
+                    <h2>I'm a developer.</h2>
                 </div>
+            </div>
         </section>
     </div>
 
