--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     <!--Hero Landing Section-->
     <div>
         <section id="intro" class="container-fluid mx-auto">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center blob-container">
                 <svg class="blob"
                 id="visual" 
                 viewBox="0 0 960 540" 
