--- a/public/index.html
+++ b/public/index.html
@@ -314,17 +314,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    
-        <script>
-            const tween = KUTE.fromTo(
-                '#blob1',
-                {path: '#blob1'},
-                {path: '#blob2'},
-                {repeat: 999, duration: 3000, yoyo: true}
-            )
-            tween.start()
-        </script>
 
+    <!--Blob JS animation-->
+    <script src="src/scripts/blob.js"></script>
 </body>
 
 </html>
