--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Acosta</title>
-    <!--Google Fonts API, , then external stylesheet-->
+    <!--Google Fonts API-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!--BootStrap CSS-->
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <!--External Style Sheets-->
     <link rel="stylesheet" href="src/styles/style.css">
     <!--CDN link for KUTE.js-->
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"></script>
+    <!--AOS Linkage-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!--Email JS Linkage-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 
 <body>
@@ -88,14 +94,14 @@
     <!--About Me Section-->
     <section id="about" class="container overflow-hidden">
         <div class="row align-items-center">
-            <div class="col-lg-5 align-self-center">
+            <div class="col-lg-5 align-self-center" data-aos="zoom-in">
                 <div class="row justify-content-center align-items-start">
                     <img src="src/assets/portrait.png" alt="Self portrait headshot" class="img-fluid headshot">
                 </div>
             </div>
             <div class="col-lg-7">
                 <div class="row my-5">
-                    <section class="about-text">
+                    <section class="about-text" data-aos="fade-right">
                         <h3 class="subheading-3">About Me</h3>
                         <p>I am currently a Computer Science student at Texas A&M University who is fascinated with
                             learning and using technology
@@ -104,7 +110,7 @@
                     </section>
                 </div>
                 <div class="row">
-                    <section class="about-skills ">
+                    <section class="about-skills" data-aos="fade-left" data-aos-offset="120">
                         <h3 class="subheading-3">Skills</h3>
                         <ul class="skill-list">
                             <li>
@@ -141,9 +147,9 @@
 
     <!--Experience Section-->
     <section id="experience" class="container overflow-hidden experience-tiles">
-        <h2 class="subheading-2">Experience</h2>
+        <h2 class="subheading-2" data-aos="zoom-in">Experience</h2>
         <!--Paycom Tile-->
-        <div class="row align-items-center tile">
+        <div class="row align-items-center tile" data-aos="fade-right">
             <div class="col-lg-4 align-self-center img-container">
                 <img src="src/assets/paycom-logo.jpg" alt="paycom career logo" class="img-fluid career-icon">
             </div>
@@ -175,7 +181,7 @@
         </div>
 
         <!--TAMU Tile-->
-        <div class="row align-items-center tile">
+        <div class="row align-items-center tile" data-aos="fade-left">
             <div class="col-lg-4 align-self-center img-container">
                 <img src="src/assets/math-logo.png" alt="TAMU logo" class="img-fluid career-icon">
             </div>
@@ -207,7 +213,7 @@
         </div>
 
         <!--ACC Tile-->
-        <div class="row align-items-center justify-items-center tile">
+        <div class="row align-items-center justify-items-center tile" data-aos="fade-right">
             <div class="col-lg-4 align-self-center img-container">
                 <img src="src/assets/acc-logo.jpg" alt="acc logo" class="img-fluid career-icon">
             </div>
@@ -266,8 +272,8 @@
     <section id="contact" class="container overflow-hidden">
         <div class="row justify-content-center ">
             <div class="form-container">
-                <h2 class="contact-text">Contact Me</h2>
-                <form class="contact-form mx-auto">
+                <h2 class="contact-text" data-aos="zoom-in">Contact Me</h2>
+                <form class="contact-form mx-auto" data-aos="fade-down" id="form-container">
                     <input id="user-name" class="name-input contact-input" type="text" placeholder="<Name>" required>
                     <input id="user-email" class="email-input contact-input" type="email" placeholder="<Email>"
                         required>
@@ -308,15 +314,21 @@
     </section>
 
     <!--Footer SVG-->
-    <div src="src/assets/layered-waves-haikei.svg" class="spacer layer1"></div>
-
+    <div src="src/assets/layered-waves-haikei.svg" class="spacer layer1" data-aos="fade-up" data-aos-offset="100"></div>
     <!--Popper.js, Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
-    <!--Blob JS animation-->
-    <script src="src/scripts/blob.js"></script>
+    <!--JS animation-->
+    <script src="src/scripts/main.js"></script>
+    <!--AOS JS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 250,
+            duration: 1000
+        });
+    </script>
 </body>
 
 </html>
