--- a/index.html
+++ b/index.html
@@ -159,21 +159,21 @@
                         <h3>Paycom</h3>
                         <p>Summer Technology Engagement Program | July 2023 - Present</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia distinctio, sequi adipisci sed
-                        facere
-                        voluptatum nam eaque repellendus nisi voluptatem velit quos incidunt. Magnam cumque ipsam
-                        aliquid nihil sapiente doloribus.
+                    <p>
+                        Gained hands on experience training in DevOps methodologies as well as frontend and backend technologies 
+                        such as React, C#, PHP, Docker, and SQL. Additionally, I learned best practices in application security and methods of
+                        fighting against common vulnerabilities.
                     </p>
                 </div>
                 <div class="experience-skills">
                     <ul class="paycom-skills career-skills">
                         <li class="python-icon">
-                            <img src="src/assets/python-logo.svg" alt="python-icon" class="skill-icon">
-                            <span>Python</span>
+                            <img src="src/assets/react-logo.svg" alt="react-icon" class="skill-icon">
+                            <span>React</span>
                         </li>
                         <li class="javascript-icon">
-                            <img src="src/assets/JavaScript-logo.png" alt="javascript-icon" class="skill-icon">
-                            <span>JavaScript</span>
+                            <img src="src/assets/c-sharp-logo.svg" alt="c#-icon" class="skill-icon">
+                            <span>C#</span>
                         </li>
                     </ul>
                 </div>
