--- a/public/index.html
+++ b/public/index.html
@@ -193,8 +193,9 @@
                         <p>January 2023 - Present</p>
                     </div>
                     <p>
-                        I am currently working alongisde my professor where I am responsible for performing unit tests,
-                        debugging, and maintaining documentations for various MATLAB simulations programs.
+                        Currently working under the guidance of Dr. Prabir Daripa for my research regarding the modeling
+                        and simulation of methods for enhanced oil recovery. Here I utilized and developed MATLAB programs to perform computation heavy simulations while also
+                        implementing a user-interface to provide a more intuitive user experience. I also maintained documentation and performed isolated unit tests before integration into codebase.
                     </p>
                 </div>
                 <div class="experience-skills">
