--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <div class="collapse navbar-collapse list-container" id="navbarNav">
                 <ul class="navbar-nav nav-list ms-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#about">// About Me</a>
+                        <a class="nav-link active" aria-current="page" href="carlosracosta.com/#about">// About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#experience">// Experience</a>
+                        <a class="nav-link" href="carlosracosta.com/#experience">// Experience</a>
                     </li>
                     <!----
                     <li class="nav-item">
@@ -51,7 +51,7 @@
                     </li>
                     -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">// Contact Me</a>
+                        <a class="nav-link" href="carlosracosta.com/#contact">// Contact Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link resume-button" target="_blank"
@@ -280,9 +280,9 @@
                 <h2 class="contact-text mb-3" data-aos="zoom-in">Contact Me</h2>
                 <div class="row social-icon" data-aos="fade-right">
                     <ul>
-                        <li><a onmouseover="colorChange(event)" onmouseleave="colorReturn(event)" id="mail-logo" class="social-background" href="mailto:carlosra0345@gmail.com" target="_blank"><i class="fa fa-regular fa-envelope"></i></a></li>
-                        <li><a onmouseover="colorChange(event)" onmouseleave="colorReturn(event)" id="github-logo" class="social-background" href="https://github.com/carlosra0345" target="_blank"><i class="fa fa-brands fa-github"></i></a></li>
-                        <li><a onmouseover="colorChange(event)" onmouseleave="colorReturn(event)" id="linkedin-logo" class="social-background" href="https://www.linkedin.com/in/carlos-acosta02/" target="_blank"><i class="fa fa-brands fa-linkedin"></i></a></li>
+                        <li><a id="mail-logo" class="social-background" href="mailto:carlosra0345@gmail.com" target="_blank"><i class="fa fa-regular fa-envelope"></i></a></li>
+                        <li><a id="github-logo" class="social-background" href="https://github.com/carlosra0345" target="_blank"><i class="fa fa-brands fa-github"></i></a></li>
+                        <li><a id="linkedin-logo" class="social-background" href="https://www.linkedin.com/in/carlos-acosta02/" target="_blank"><i class="fa fa-brands fa-linkedin"></i></a></li>
                     </ul>
                 </div>
                 <form class="contact-form mx-auto" data-aos="fade-left" id="form-container">
