--- a/public/index.html
+++ b/public/index.html
@@ -152,37 +152,6 @@
     <!--Experience Section-->
     <section id="experience" class="container overflow-hidden experience-tiles">
         <h2 class="subheading-2" data-aos="zoom-in">Experience</h2>
-        <!--Paycom Tile-->
-        <div class="row align-items-center tile" data-aos="fade-right">
-            <div class="col-lg-4 align-self-center img-container">
-                <img src="src/assets/paycom-logo.jpg" alt="paycom career logo" class="img-fluid career-icon">
-            </div>
-            <div class="col-lg-8 align-self-center">
-                <div class="tile-text">
-                    <div class="tile-heading">
-                        <h3>Paycom</h3>
-                        <p>Summer Technology Engagement Program | July 2023 - Present</p>
-                    </div>
-                    <p>
-                        Gained hands on experience training in DevOps methodologies as well as frontend and backend technologies 
-                        such as React, C#, PHP, Docker, and SQL. Additionally, I learned best practices in application security and methods of
-                        fighting against common vulnerabilities.
-                    </p>
-                </div>
-                <div class="experience-skills">
-                    <ul class="paycom-skills career-skills">
-                        <li class="python-icon">
-                            <img src="src/assets/react-logo.svg" alt="react-icon" class="skill-icon">
-                            <span>React</span>
-                        </li>
-                        <li class="javascript-icon">
-                            <img src="src/assets/c-sharp-logo.svg" alt="c#-icon" class="skill-icon">
-                            <span>C#</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
 
         <!--TAMU Tile-->
         <div class="row align-items-center tile" data-aos="fade-left">
@@ -216,6 +185,38 @@
                 </div>
             </div>
         </div>
+        
+        <!--Paycom Tile-->
+        <div class="row align-items-center tile" data-aos="fade-right">
+            <div class="col-lg-4 align-self-center img-container">
+                <img src="src/assets/paycom-logo.jpg" alt="paycom career logo" class="img-fluid career-icon">
+            </div>
+            <div class="col-lg-8 align-self-center">
+                <div class="tile-text">
+                    <div class="tile-heading">
+                        <h3>Paycom</h3>
+                        <p>Summer Technology Engagement Program | July 2023</p>
+                    </div>
+                    <p>
+                        Gained hands on experience training in DevOps methodologies as well as frontend and backend technologies 
+                        such as React, C#, PHP, Docker, and SQL. Additionally, I learned best practices in application security and methods of
+                        fighting against common vulnerabilities.
+                    </p>
+                </div>
+                <div class="experience-skills">
+                    <ul class="paycom-skills career-skills">
+                        <li class="python-icon">
+                            <img src="src/assets/react-logo.svg" alt="react-icon" class="skill-icon">
+                            <span>React</span>
+                        </li>
+                        <li class="javascript-icon">
+                            <img src="src/assets/c-sharp-logo.svg" alt="c#-icon" class="skill-icon">
+                            <span>C#</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <!--ACC Tile-->
         <div class="row align-items-center justify-items-center tile" data-aos="fade-right">
@@ -227,7 +228,7 @@
                     <div class="tile-heading">
                         <h3>Aggie Coding Club</h3>
                         <p>Events and Marketing Officer | </p>
-                        <p>September 2023 - Present</p>
+                        <p>September 2022 - Present</p>
                     </div>
                     <p>
                         Recently elected as an Events and Marketing Officer where I am responsible for managing the
